; ModuleID = '/home/carl/AnghaBench/libevent/extr_watch.c_evwatch_free.c'
source_filename = "/home/carl/AnghaBench/libevent/extr_watch.c_evwatch_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evwatch = type { i64, %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32* }

@th_base_lock = common dso_local global i32 0, align 4
@next = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @evwatch_free(%struct.evwatch* %0) #0 {
  %2 = alloca %struct.evwatch*, align 8
  store %struct.evwatch* %0, %struct.evwatch** %2, align 8
  %3 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %4 = getelementptr inbounds %struct.evwatch, %struct.evwatch* %3, i32 0, i32 1
  %5 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %6 = load i32, i32* @th_base_lock, align 4
  %7 = call i32 @EVBASE_ACQUIRE_LOCK(%struct.TYPE_3__* %5, i32 %6)
  %8 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %9 = getelementptr inbounds %struct.evwatch, %struct.evwatch* %8, i32 0, i32 1
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %14 = getelementptr inbounds %struct.evwatch, %struct.evwatch* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = getelementptr inbounds i32, i32* %12, i64 %15
  %17 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %18 = load i32, i32* @next, align 4
  %19 = call i32 @TAILQ_REMOVE(i32* %16, %struct.evwatch* %17, i32 %18)
  %20 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %21 = getelementptr inbounds %struct.evwatch, %struct.evwatch* %20, i32 0, i32 1
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %21, align 8
  %23 = load i32, i32* @th_base_lock, align 4
  %24 = call i32 @EVBASE_RELEASE_LOCK(%struct.TYPE_3__* %22, i32 %23)
  %25 = load %struct.evwatch*, %struct.evwatch** %2, align 8
  %26 = call i32 @mm_free(%struct.evwatch* %25)
  ret void
}

declare dso_local i32 @EVBASE_ACQUIRE_LOCK(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.evwatch*, i32) #1

declare dso_local i32 @EVBASE_RELEASE_LOCK(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @mm_free(%struct.evwatch*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
